--- a/src/views/login/Login.module.css
+++ b/src/views/login/Login.module.css
@@ -8,6 +8,10 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  background-image: url('../../images/darth.jpg');
+  background-size:auto;
+  background-position: center;
+  background-repeat:repeat;  
 }
 
 .login-container {
